<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_beautify"
                android:icon="@drawable/ic_list"
                android:title="@string/nav_beautify"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account"
                android:title="@string/nav_profile"/>
        <item
                android:id="@+id/nav_promotion"
                android:icon="@drawable/ic_tag"
                android:title="@string/nav_promotion"/>
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/nav_map"/>
    </group>

</menu>
