<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity"
        android:background="@drawable/bg">

    <TextView
            android:text="@string/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSearchOpenTime"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>
    <Button
            android:text="@string/login_title"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/btnLogin"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"/>
    <Button
            android:text="@string/login_register"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/btnRegister"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            android:background="@drawable/transparent_bg_button"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:hint="@string/login_email"
            android:padding="6dp"
            android:background="@android:color/white"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewSearchOpenTime"
            android:paddingTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:ems="10"
            android:id="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:padding="6dp"
            android:background="@android:color/white"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"/>
</android.support.constraint.ConstraintLayout>